kustomize/argocd-stack/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"                # Redireciona HTTP para HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"          # Garante o redirect SSL
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"              # Limite de tamanho de upload (ajuste conforme o app)
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"          # Timeout maior para apps que demoram pra responder
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "true"   # Força uso de ciphers mais seguros
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd-k8s.vinicima.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  - host: argocd.vinicima.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argocd-k8s.vinicima.com
    - argocd.vinicima.com
    secretName: vinicima-com-tls
