kustomize/argocd-stack/argocd-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd-k8s.vinicima.com`) || Host(`argocd.vinicima.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: https
          scheme: https  # Backend usa HTTPS
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
